--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -88,4 +88,6 @@
     <color name="gradient_avatar_chat">#44000000</color>
 
     <color name="status_connected">#13e03c</color>
+
+    <color name="participants_layout">#f2f2f2</color>
 </resources>
