QA Report #5498 and #5497:  - Disable select button when the entire cloud drive in shown  - An user shouldn't be able to share an incoming share folder.

--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -49,6 +49,13 @@
         </LinearLayout>
     </TabHost>
 
+    <FrameLayout
+        android:id="@+id/cloudDriveFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_explorer"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:id="@+id/file_logging_in_layout"
         android:layout_width="fill_parent"
