Tasks #5624 and #5625: - Sliding panel to show options of group chat participants in screen "Group chat info" - Show "alter participant" messages

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,7 +17,7 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        tools:context=".lollipop.ChatActivityLollipop" />
+        tools:context=".lollipop.megachat.ChatActivityLollipop" />
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
