--- a/app/src/main/res/layout/activity_group_chat_properties.xml
+++ b/app/src/main/res/layout/activity_group_chat_properties.xml
@@ -322,6 +322,13 @@
             </LinearLayout>
 
         </ScrollView>
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            layout="@layout/sliding_group_participants_panel"
+            android:visibility="gone"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
