--- a/app/src/main/res/layout/sliding_chat_panel.xml
+++ b/app/src/main/res/layout/sliding_chat_panel.xml
@@ -17,7 +17,7 @@
     <!-- MAIN CONTENT -->
 
     <FrameLayout
-        android:id="@+id/file_list_out_chat"
+        android:id="@+id/chat_list_out_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
@@ -36,7 +36,7 @@
     <!-- SLIDING LAYOUT -->
 
     <LinearLayout
-        android:id="@+id/file_list_chat"
+        android:id="@+id/chat_list_chat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -44,7 +44,7 @@
         android:padding="0dp">
 
         <LinearLayout
-            android:id="@+id/file_list_chat_title_layout"
+            android:id="@+id/chat_list_chat_title_layout"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_marginTop="8dp"
@@ -83,7 +83,7 @@
                 android:layout_marginLeft="16dp">
 
                 <TextView
-                    android:id="@+id/file_list_chat_name_text"
+                    android:id="@+id/chat_list_chat_name_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -91,12 +91,12 @@
                     android:textSize="16sp"/>
 
                 <TextView
-                    android:id="@+id/file_list_chat_mail_text"
+                    android:id="@+id/chat_list_chat_mail_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/mail_my_account"
                     android:gravity="center_vertical"
-                    android:layout_below="@+id/file_list_chat_name_text"
+                    android:layout_below="@+id/chat_list_chat_name_text"
                     android:textSize="14sp"/>
 
             </RelativeLayout>
@@ -111,14 +111,14 @@
             android:background="@color/chat_sliding_panel_separator"/>
 
         <LinearLayout
-            android:id="@+id/file_list_info_chat_layout"
+            android:id="@+id/chat_list_info_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/file_list_info_chat_image"
+                android:id="@+id/chat_list_info_chat_image"
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -129,19 +129,18 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/file_list_info_chat_text"
+                android:id="@+id/chat_list_info_chat_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:layout_marginLeft="18dp"
-                android:text="@string/contact_properties_activity"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/file_list_leave_chat_layout"
+            android:id="@+id/chat_list_leave_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -159,7 +158,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/file_list_leave_chat_text"
+                android:id="@+id/chat_list_leave_chat_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
@@ -171,7 +170,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/file_list_clear_history_chat_layout"
+            android:id="@+id/chat_list_clear_history_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -189,7 +188,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/file_list_clear_history_chat_text"
+                android:id="@+id/chat_list_clear_history_chat_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
@@ -201,14 +200,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/file_list_mute_chat_layout"
+            android:id="@+id/chat_list_mute_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/file_list_mute_chat_image"
+                android:id="@+id/chat_list_mute_chat_image"
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -219,7 +218,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/file_list_mute_chat_text"
+                android:id="@+id/chat_list_mute_chat_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
