--- a/app/src/main/res/layout/sliding_group_participants_panel.xml
+++ b/app/src/main/res/layout/sliding_group_participants_panel.xml
@@ -110,6 +110,100 @@
             android:layout_marginLeft="72dp"
             android:background="@color/chat_sliding_panel_separator"/>
 
+        <!--Contact info-->
+        <LinearLayout
+            android:id="@+id/contact_info_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/contact_info_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:layout_marginLeft="5dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/info_ic"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/contact_info_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/contact_properties_activity"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Add contact-->
+        <LinearLayout
+            android:id="@+id/add_contact_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/add_contact_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:layout_marginLeft="5dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_add_contact"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/add_contact_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/menu_add_contact"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Start conversation-->
+        <LinearLayout
+            android:id="@+id/start_chat_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/start_chat_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:layout_marginLeft="5dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_add_contact"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/start_chat_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/group_chat_start_conversation_label"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Change Permissions-->
         <LinearLayout
             android:id="@+id/change_permissions_group_participants_chat_layout"
             android:layout_width="match_parent"
@@ -140,6 +234,7 @@
                 android:textSize="16sp"/>
         </LinearLayout>
 
+        <!--Remove contact-->
         <LinearLayout
             android:id="@+id/remove_group_participants_chat_layout"
             android:layout_width="match_parent"
@@ -166,6 +261,68 @@
                 android:paddingTop="2dp"
                 android:layout_marginLeft="18dp"
                 android:text="@string/general_remove"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Edit profile-->
+        <LinearLayout
+            android:id="@+id/edit_profile_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/edit_profile_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/info_ic"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/edit_profile_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/group_chat_edit_profile_label"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Edit profile-->
+        <LinearLayout
+            android:id="@+id/leave_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/leave_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_rename"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/leave_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/title_properties_chat_leave_chat"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
         </LinearLayout>
