--- a/app/src/main/res/layout/activity_group_chat_properties.xml
+++ b/app/src/main/res/layout/activity_group_chat_properties.xml
@@ -25,6 +25,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/scroll_view_group_chat_properties"
             android:layout_below="@+id/toolbar_group_chat_properties">
 
             <LinearLayout
