--- a/app/src/main/res/layout/sliding_group_participants_panel.xml
+++ b/app/src/main/res/layout/sliding_group_participants_panel.xml
@@ -166,7 +166,8 @@
                 android:paddingBottom="2dp"
                 android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
-                android:src="@drawable/ic_add_contact"
+                android:src="@drawable/ic_menu_chat"
+                android:tint="@color/black"
                 android:visibility="visible" />
 
             <TextView
