--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/accentColor"
+                android:textColor="@color/name_my_account"
                 android:layout_centerHorizontal="true"/>
 
         </RelativeLayout>
