--- a/app/src/main/res/menu/messages_chat_action.xml
+++ b/app/src/main/res/menu/messages_chat_action.xml
@@ -3,27 +3,27 @@
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
 
     <item
-        android:id="@+id/cab_menu_edit"
+        android:id="@+id/chat_cab_menu_edit"
         android:orderInCategory="105"
         android:title="@string/title_edit_profile_info"
         MEGA:showAsAction="always"
         android:icon="@drawable/ic_edit"/>
 
     <item
-        android:id="@+id/cab_menu_copy"
+        android:id="@+id/chat_cab_menu_copy"
         android:orderInCategory="105"
         android:title="@string/context_copy"
         MEGA:showAsAction="always"
         android:icon="@drawable/ic_content_copy_white"/>
 
     <item
-        android:id="@+id/cab_menu_delete"
+        android:id="@+id/chat_cab_menu_delete"
         android:orderInCategory="110"
         android:title="@string/context_delete"
         MEGA:showAsAction="always"
         android:icon="@drawable/ic_close_white"/>
 
-    <item
+<!--    <item
         android:id="@+id/cab_menu_select_all"
         android:orderInCategory="120"
         android:title="@string/action_select_all"
@@ -33,6 +33,6 @@
         android:id="@+id/cab_menu_unselect_all"
         android:orderInCategory="120"
         android:title="@string/action_unselect_all"
-        MEGA:showAsAction="never" />
+        MEGA:showAsAction="never" />-->
 
 </menu>
