--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -104,6 +104,17 @@
 			android:title="@string/settings_chat_status_offline" />
 
 	</PreferenceCategory>
+
+	<PreferenceCategory
+		android:key="settings_notifications_chat"
+		android:layout="@layout/my_category_preference"
+		android:title="@string/title_properties_chat_contact_notifications">
+
+		<Preference
+			android:key="settings_nested_notifications_chat"
+			android:title="@string/section_chat" />
+
+	</PreferenceCategory>
 	
     <PreferenceCategory 
         android:key="settings_storage"
