--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+	android:key="general_preference_screen"
     android:background="@color/white">
     
      <PreferenceCategory
@@ -87,6 +88,7 @@
 
 	<PreferenceCategory
 		android:key="settings_status_chat"
+		android:dependency="settings_chat_enable"
 		android:layout="@layout/my_category_preference"
 		android:title="@string/settings_chat_status">
 		<!--        android:textColor="@color/pressed_mega">  -->
