--- a/app/src/main/res/layout/sliding_chat_panel.xml
+++ b/app/src/main/res/layout/sliding_chat_panel.xml
@@ -87,6 +87,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:textColor="@color/name_my_account"
                     android:textSize="16sp"/>
 
