Tasks #5790: - Fix margins of chat screen

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -337,7 +337,8 @@
                 android:id="@+id/messages_chat_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:choiceMode="multipleChoice"/>
+                android:choiceMode="multipleChoice"
+                android:paddingBottom="12dp"/>
 
         </RelativeLayout>
 
