--- a/app/src/main/res/layout/item_recent_chat_list.xml
+++ b/app/src/main/res/layout/item_recent_chat_list.xml
@@ -50,7 +50,7 @@
         android:textSize="16sp"
         android:layout_toRightOf="@id/recent_chat_list_relative_layout_avatar"
         android:layout_marginLeft="13dp"
-        android:layout_marginRight="65dp"
+        android:layout_marginTop="12dp"
         android:maxLines="1"
         android:textColor="@color/file_list_first_row" />
 
@@ -60,6 +60,8 @@
         android:layout_height="6dp"
         android:layout_alignTop="@id/recent_chat_list_name"
         android:layout_toRightOf="@id/recent_chat_list_name"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="6dp"
         android:background="@null"
         android:src="@drawable/circle_status_contact_not_connected" />
 
@@ -131,10 +133,12 @@
         android:id="@+id/recent_chat_list_call_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_notifications_off_black"
+        android:src="@drawable/ic_notifications_off"
         android:background="@null"
-        android:tint="@color/transparency_white"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="16dp"
         android:layout_toLeftOf="@id/recent_chat_list_three_dots"/>
 
 </RelativeLayout>
