--- a/app/src/main/res/menu/chat_action.xml
+++ b/app/src/main/res/menu/chat_action.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/cab_menu_call_chat"
         android:orderInCategory="100"
-        android:title="@string/action_mute"
+        android:title="@string/general_mute"
         MEGA:showAsAction="always"
         android:icon="@drawable/ic_phone_white"
         android:enabled="false"/>
