--- a/app/src/main/res/menu/recent_chat_action.xml
+++ b/app/src/main/res/menu/recent_chat_action.xml
@@ -6,9 +6,9 @@
     <item
         android:id="@+id/cab_menu_mute"
         android:orderInCategory="100"
-        android:title="@string/action_mute"
+        android:title="@string/general_mute"
         MEGA:showAsAction="always"
-        android:icon="@drawable/ic_volume_off"/>
+        android:icon="@drawable/ic_notifications_off_white"/>
 
     <item
         android:id="@+id/cab_menu_archive"
