--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -81,14 +81,13 @@
 
 		<SwitchPreference
 			android:key="settings_chat_enable"
-			android:title="@string/settings_chat_off"
+			android:title="@string/section_chat"
 			android:defaultValue="true"/>
 
 	</PreferenceCategory>
 
 	<PreferenceCategory
 		android:key="settings_status_chat"
-		android:dependency="settings_chat_enable"
 		android:layout="@layout/my_category_preference"
 		android:title="@string/settings_chat_status">
 		<!--        android:textColor="@color/pressed_mega">  -->
