--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -6,11 +6,20 @@
 	android:background="#acbdbb"
 	android:fitsSystemWindows="true">
 
-	<RelativeLayout
+	<android.support.v7.widget.Toolbar
 		android:id="@+id/add_contact_toolbar"
 		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:background="#acbdbb"
+		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+	<RelativeLayout
+		android:id="@+id/add_contact_toolbar_"
+		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="#acbdbb">
+		android:background="#acbdbb"
+		android:visibility="gone">
 
 		<ImageView
 			android:id="@+id/add_contact_back"
@@ -29,6 +38,17 @@
 			style="@style/dialogActionButton"
 			android:layout_alignParentRight="true"/>
 
+		<TextView
+			android:id="@+id/add_contact_title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:fontFamily="sans-serif-medium"
+			android:textSize="20sp"
+			android:text="Start group chat"
+			android:textColor="#ffffff"
+			android:layout_marginTop="10dp"
+			android:layout_marginLeft="72dp"/>
+
 		<!-- <com.doodle.android.chips.ChipsView
                 android:id="@+id/chipsView"
                 android:layout_width="match_parent"
@@ -36,6 +56,28 @@
                 android:layout_toRightOf="@id/add_contact_back"
                 android:layout_toLeftOf="@id/add_contact_send"/>
     -->
+
+
+
+		<EditText
+			android:id="@+id/add_contact_edittext"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:hint="Type a contact's name or email"
+			android:imeOptions="actionDone"
+			android:textColor="@color/white"
+			android:textSize="14sp"
+			android:inputType="text|textNoSuggestions|textMultiLine"
+			android:focusableInTouchMode="true"
+			android:layout_toRightOf="@id/add_contact_back"
+			android:layout_toLeftOf="@id/add_contact_send"
+			android:layout_below="@id/add_contact_title"
+			android:layout_marginTop="14dp"
+			android:background="@null"
+			android:textCursorDrawable="@drawable/add_contact_color_caret"
+			android:layout_marginBottom="20dp"
+			android:nextFocusDown="@+id/add_contact_list_layout"/>
+
 
 
 		<mega.privacy.android.app.components.tokenautocomplete.ContactsCompletionView
@@ -54,49 +96,50 @@
 			android:background="@null"
 			android:textCursorDrawable="@drawable/add_contact_color_caret"
 			android:layout_marginBottom="20dp"
-			android:nextFocusDown="@+id/add_contact_list_layout"/>
+			android:nextFocusDown="@+id/add_contact_list_layout"
+			android:visibility="gone"/>
+	</RelativeLayout>
 
-		<RelativeLayout
-			android:id="@+id/add_contact_list_layout"
+	<RelativeLayout
+		android:id="@+id/add_contact_list_layout"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_below="@id/add_contact_toolbar"
+		android:background="@color/white">
+
+		<ImageView
+			android:id="@+id/add_contact_list_empty_image"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="25dp"
+			android:gravity="center_horizontal" />
+
+		<TextView
+			android:id="@+id/add_contact_list_empty_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/add_contact_list_empty_image"
+			android:layout_centerHorizontal="true"
+			android:gravity="center_horizontal"
+			android:textColor="@color/text_secondary"
+			android:textSize="16sp" />
+
+		<ProgressBar
+			android:id="@+id/add_contact_progress_bar"
+			style="?android:attr/progressBarStyleLargeInverse"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:layout_below="@id/add_contact_list_empty_text"
+			android:layout_centerHorizontal="true"
+			android:visibility="gone"
+			android:layout_marginTop="10dp" />
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/add_contact_list"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_below="@id/add_contact_chips"
-			android:background="@color/white">
-
-			<ImageView
-				android:id="@+id/add_contact_list_empty_image"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_centerHorizontal="true"
-				android:layout_marginTop="25dp"
-				android:gravity="center_horizontal" />
-
-			<TextView
-				android:id="@+id/add_contact_list_empty_text"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_below="@id/add_contact_list_empty_image"
-				android:layout_centerHorizontal="true"
-				android:gravity="center_horizontal"
-				android:textColor="@color/text_secondary"
-				android:textSize="16sp" />
-
-			<ProgressBar
-				android:id="@+id/add_contact_progress_bar"
-				style="?android:attr/progressBarStyleLargeInverse"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_horizontal"
-				android:layout_below="@id/add_contact_list_empty_text"
-				android:layout_centerHorizontal="true"
-				android:visibility="gone"
-				android:layout_marginTop="10dp" />
-
-			<android.support.v7.widget.RecyclerView
-				android:id="@+id/add_contact_list"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:choiceMode="multipleChoice" />
-		</RelativeLayout>
+			android:choiceMode="multipleChoice" />
 	</RelativeLayout>
 </RelativeLayout>
