--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,5 +90,6 @@
     <color name="status_connected">#13e03c</color>
 
     <color name="participants_layout">#f2f2f2</color>
+    <color name="status_invisible_layout">#bfbfbf</color>
     <color name="preference_category_title">#f2f2f2</color>
 </resources>
