Bug #5790: Fix margins of chat screen

--- a/app/src/main/res/layout/chat_recent_tab.xml
+++ b/app/src/main/res/layout/chat_recent_tab.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/status_text_layout"
         android:layout_width="fill_parent"
-        android:layout_height="@dimen/status_layout"
+        android:layout_height="24dp"
         android:background="@color/content_text_background">
 
         <TextView
@@ -89,10 +89,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_recent_list_view"
+        android:clipToPadding="false"
+        android:layout_below="@+id/status_text_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/status_text_layout"
         android:choiceMode="multipleChoice" />
-
 
 </RelativeLayout>
